tokamak-optimism/kustomize/overlays/aws_rinkeby/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:005310045109:certificate/7f58927b-205a-4892-a77d-bf3b0f720e69
spec:
  rules:
    - http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: l2geth-svc
                port:
                  number: 8546
          - path: /
            pathType: Prefix
            backend:
              service:
                name: l2geth-svc
                port:
                  number: 8545
